// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneText /> should render the Telephone Text 1`] = `
<span>
  <Emoji
    emoji="flag-au"
    type="body"
  />
  <span
    data-role="countryCode"
  >
    <Styled(Text)
      color="#667380"
      isUpper={true}
      showFlag={true}
      type="body"
    >
      au
    </Styled(Text)>
  </span>
  <Text
    data-role="phoneNumber"
    isInline={true}
    tag="span"
    type="body"
  >
    +61 412 341 234
  </Text>
</span>
`;

exports[`<TelephoneText /> should render the Telephone Text no flag 1`] = `
<span>
  <span
    data-role="countryCode"
  >
    <Styled(Text)
      color="#667380"
      isUpper={true}
      showFlag={false}
      type="body"
    >
      au
    </Styled(Text)>
  </span>
  <Text
    data-role="phoneNumber"
    isInline={true}
    tag="span"
    type="body"
  >
    +61 412 341 234
  </Text>
</span>
`;

exports[`<TelephoneText /> should render the Telephone Text with no country information 1`] = `
<span>
  <Text
    data-role="phoneNumber"
    isInline={true}
    tag="span"
    type="body"
  >
    33333333
  </Text>
</span>
`;
